--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -53,9 +53,13 @@
 				"bierner.markdown-preview-github-styles",
 				"DavidAnson.vscode-markdownlint",
 				"yzhang.markdown-all-in-one"
-			]
-		}
+			],
+			"settings": {
+				"ansible.python.interpreterPath": "/usr/bin/python3",
+				"ansible.ansible.path": "/home/vscode/.local/bin/ansible",
+				"ansible.validation.lint.path": "/home/vscode/.local/bin/ansible-lint"
+			}
+		},
 	},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "vscode"
 }
