--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,8 +38,8 @@
 	// This can be used to network with other containers or the host.
 	"forwardPorts": [3000, 8025],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "/usr/bin/bash .devcontainer/scripts/post_create.sh",
-	"postStartCommand": "/usr/bin/bash .devcontainer/scripts/post_start.sh",
+	"postCreateCommand": "/usr/bin/bash .devcontainer/post_create.sh",
+	"postStartCommand": "/usr/bin/bash .devcontainer/post_start.sh",
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
