--- a/.devcontainer/post_start.yml
+++ b/.devcontainer/post_start.yml
@@ -2,4 +2,9 @@
   hosts: all
   become: false
   gather_facts: false
-  tasks: []
+  tasks:
+    - name: 環境変数の有効化
+      ansible.builtin.command:
+        cmd: direnv allow
+        removes: "{{ playbook_dir | dirname }}/.envrc"
+        chdir: "{{ playbook_dir | dirname }}"
