--- a/.devcontainer/roles/vscode/tasks/main.yml
+++ b/.devcontainer/roles/vscode/tasks/main.yml
@@ -10,15 +10,15 @@
       - label: Start Rails server
         type: shell
         command: bundle exec rails server -p 3000 -b 0.0.0.0
-        detail: Start Rails server
       - label: Install gem packages
         type: shell
         command: bundle install
-        detail: Install gem packages
       - label: Update gem packages
         type: shell
         command: bundle update
-        detail: Update gem packages
+      - label: Sync local repository from remote parent
+        type: shell
+        command: gh repo sync
 - name: Rakeタスクの一覧を取得
   ansible.builtin.command:
     cmd: bundle exec rake -T
