--- a/.devcontainer/roles/lde/tasks/git_prompt_for_bash.yml
+++ b/.devcontainer/roles/lde/tasks/git_prompt_for_bash.yml
@@ -11,6 +11,6 @@
     marker: "# {mark} bash-git-prompt ANSIBLE MANAGED BLOCK"
     content: |
       if [ -f "$HOME/.bash-git-prompt/gitprompt.sh" ]; then
-        GIT_PROMPT_ONLY_IN_REPO=1
+        # GIT_PROMPT_ONLY_IN_REPO=1
         source $HOME/.bash-git-prompt/gitprompt.sh
       fi
