--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -33,3 +33,6 @@ RUN mkdir -p /etc/apt/keyrings \
   && chmod 644 /etc/apt/keyrings/gierens.gpg /etc/apt/sources.list.d/gierens.list \
   && apt update \
   && apt install -y eza
+
+## Install d2
+RUN curl -fsSL https://d2lang.com/install.sh | sh -s --
