--- a/.devcontainer/roles/redmine/defaults/main.yml
+++ b/.devcontainer/roles/redmine/defaults/main.yml
@@ -13,8 +13,9 @@ redmine_additional_environment: |
   config.paths['app/views'] = ['views', 'app/views']
 
 redmine_gemfile_local: |
-  gem 'ruby-lsp'
   gem 'rails-erd'
+  gem 'ruby-lsp'
+  gem 'ruby-lsp-rails'
 
 redmine_lang: ja
 
