--- a/.devcontainer/roles/lde/tasks/editorconfig.yml
+++ b/.devcontainer/roles/lde/tasks/editorconfig.yml
@@ -1,5 +1,5 @@
 ---
-- name: editorconfigの設定ファイルをコピー
+- name: EditorConfigの設定ファイルをコピー
   ansible.builtin.copy:
     src: editorconfig
     dest: "{{ base_dir }}/.editorconfig"
