--- a/.devcontainer/roles/lde/tasks/main.yml
+++ b/.devcontainer/roles/lde/tasks/main.yml
@@ -18,6 +18,9 @@
 - name: オートコンプリートファイルのインストール
   ansible.builtin.import_tasks:
     file: completion.yml
+- name: gitの無視ファイルの設定を調整
+  ansible.builtin.import_tasks:
+    file: git.yml
 - name: git prompt for bashのインストール
   ansible.builtin.import_tasks:
     file: git_prompt_for_bash.yml
