--- a/.devcontainer/roles/document/tasks/api.yml
+++ b/.devcontainer/roles/document/tasks/api.yml
@@ -5,5 +5,5 @@
     chdir: "{{ base_dir }}"
     creates: "{{ document_base_dir }}/app"
   environment:
-    RAILS_ENV: "{{ redmine_env }}"
+    RAILS_ENV: "{{ redmine_rails_env }}"
     REDMINE_LANG: "{{ redmine_lang }}"
