--- a/.devcontainer/roles/document/tasks/database.yml
+++ b/.devcontainer/roles/document/tasks/database.yml
@@ -1,11 +1,11 @@
 ---
 - name: データベースの接続設定の内容を変数に割り当て
   ansible.builtin.set_fact:
-    db_name: "{{ redmine_database[redmine_env].database }}"
-    db_host: "{{ redmine_database[redmine_env].host }}"
-    db_port: "{{ redmine_database[redmine_env].port | default(3306) }}"
-    db_user: "{{ redmine_database[redmine_env].username }}"
-    db_password: "{{ redmine_database[redmine_env].password }}"
+    db_name: "{{ redmine_database[redmine_rails_env].database }}"
+    db_host: "{{ redmine_database[redmine_rails_env].host }}"
+    db_port: "{{ redmine_database[redmine_rails_env].port | default(3306) }}"
+    db_user: "{{ redmine_database[redmine_rails_env].username }}"
+    db_password: "{{ redmine_database[redmine_rails_env].password }}"
 - name: tbls用の変数を設定
   ansible.builtin.set_fact:
     tbls_dsn: mariadb://{{ db_user }}:{{ db_password }}@{{ db_host }}:{{ db_port }}/{{ db_name }}
