--- a/.devcontainer/roles/document/tasks/mkdocs.yml
+++ b/.devcontainer/roles/document/tasks/mkdocs.yml
@@ -8,17 +8,17 @@
     src: files/mkdocs/index.md
     dest: "{{ document_base_dir }}/index.md"
     mode: "0644"
-  when: document_index_result.stat.exists
+  when: not document_index_result.stat.exists
 - name: ナビゲーションファイルの存在確認
   ansible.builtin.stat:
     path: "{{ document_base_dir }}/SUMMARY.md"
   register: document_nav_result
-- name: ナビゲーションファイルをコピー
-  ansible.builtin.copy:
-    src: files/mkdocs/SUMMARY.md
+- name: ナビゲーションファイルを生成
+  ansible.builtin.template:
+    src: SUMMARY.md.j2
     dest: "{{ document_base_dir }}/SUMMARY.md"
     mode: "0644"
-  when: document_nav_result.stat.exists
+  when: not document_nav_result.stat.exists
 - name: カスタマイズ用CSSファイルの存在確認
   ansible.builtin.stat:
     path: "{{ document_asset_css_dir }}/extra.css"
