--- a/.devcontainer/roles/redmine/tasks/main.yml
+++ b/.devcontainer/roles/redmine/tasks/main.yml
@@ -3,6 +3,12 @@
 - name: Import setup task
   ansible.builtin.import_tasks:
     file: setup.yml
+- name: Import theme task
+  ansible.builtin.import_tasks:
+    file: theme.yml
+- name: Import plugin task
+  ansible.builtin.import_tasks:
+    file: plugin.yml
 - name: Import setting task
   ansible.builtin.import_tasks:
     file: setting.yml
