--- a/.devcontainer/compose.yml
+++ b/.devcontainer/compose.yml
@@ -12,7 +12,7 @@ services:
     depends_on:
       - mariadb
       - mailpit
-      - redis
+      # - redis
       # - postgres
       # - memcached
   mariadb:
